# Rb209

./: .gitignore  CLI.md  README.md  pyproject.toml
rb209/: __main__.py  cli.py  engine.py  formatters.py  models.py
rb209/data/: crops.py  lime.py  magnesium.py  nitrogen.py  organic.py  phosphorus.py  potassium.py  sns.py  sulfur.py
ref/: convert_pdfs.py  readme.md  section1_principles.md  section2_organic_materials.md  section3_grass_forage.md  section4_arable_crops.md  section5_potatoes.md  section6_vegetables.md  section7_fruit_vines_hops.md
tests/: test_cli.py  test_engine.py  test_examples.py  test_organic.py  test_sns.py
